<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="206dp"
        android:text="@string/captain_alwell"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="285dp"
        android:text="@string/track"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_conuntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="319dp"
        android:layout_marginBottom="393dp"
        android:text="@string/country_nigeria"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="356dp"
        android:text="@string/my_email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_phone_nuber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="391dp"
        android:text="@string/phone_number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_slack_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="423dp"
        android:text="@string/slack_username"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="158dp"
        android:layout_height="178dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/profile_picture"
        app:srcCompat="@drawable/captaina" />

    <TextView
        android:id="@+id/view_hor"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="250dp"
        android:background="@android:color/black" />


</RelativeLayout>